--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@ body {
   border-bottom: 1px solid #3a424d;
 }
 input[type=checkbox], label {
-
   margin: 5px;
+  padding: 5px;
   cursor: pointer;
   font-size: .9rem;
   line-height: 1.8rem;
