--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ input[type=checkbox], label {
 .btn_close{
   display: block;
   margin-left: auto;
+  margin-right: 10px;
   width: 10px;
   height: 10px;
   cursor: pointer;
