--- a/style.css
+++ b/style.css
@@ -81,6 +81,8 @@ input[type=checkbox], label {
   cursor: pointer;
   font-size: .9rem;
   line-height: 1.8rem;
+  max-width: 300px;
+  word-wrap: break-word;
 }
 .btn_close{
   display: block;
