--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
   margin: 30px auto 0;
   padding: 15px;
   border-radius: 10px;
-  box-shadow: 0 2px 10px 0 #816516;
 }
 .todo_title {
   font-size: 2rem;
@@ -30,7 +29,7 @@ body {
 .todo_text {
   margin: 15px auto;
   padding: 1px 10px;
-  width: 95%;
+  width: 100%;
   height: 35px;
   outline: none;
   border: 1px solid #3a424d;
@@ -59,6 +58,7 @@ body {
   font-size: .9rem;
   color: #22262d;
   text-transform: uppercase;
+  transition: all 0.3s ease;
 }
 .todo_btn:hover {
   background-color: #a67411;
@@ -73,7 +73,21 @@ body {
   color: #d0d0d0;
 }
 .todo li:not(:last-child) {
-  border-bottom: 1px solid #3a424d;
+  border-bottom: 1px dashed #3a424d;
+}
+.completed {
+  padding: 0 10px;
+  margin-top: 20px;
+  border-top: 1px solid #c78814;
+}
+.completed li{
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  color: #3a424d;
+}
+.completed li:not(:last-child) {
+  border-bottom: 1px dashed #3a424d;
 }
 input[type=checkbox], label {
   margin: 5px;
@@ -81,7 +95,7 @@ input[type=checkbox], label {
   cursor: pointer;
   font-size: .9rem;
   line-height: 1.8rem;
-  max-width: 300px;
+  max-width: 100%;
   word-wrap: break-word;
 }
 .btn_close{
