--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  margin: 0;
   background-color: #262a32;
   color: #c78814;
 }
@@ -168,7 +169,6 @@ input[type=text], label {
   justify-content: space-evenly;
   list-style-type: none;
   padding: 0;
-
 }
 
 .controls_list li {
@@ -194,7 +194,7 @@ input[type=text], label {
   }
 
   .todo_list {
-    margin: 0;
+    margin: 0 auto;
     padding: 15px 5px 5px;
   }
 
@@ -204,5 +204,17 @@ input[type=text], label {
 
   .todo_label {
     max-width: 80%;
+  }
+
+  .footer {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.06);
+  }
+
+  .controls_item {
+
   }
 }
