--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
 
 body {
   margin: 0;
-  background-color: #262a32;
-  color: #c78814;
+  background: linear-gradient(#7EC7BD, #1F83A2) fixed;
 }
 
 h1 {
@@ -19,7 +18,8 @@ h1 {
 }
 
 .todo_list {
-  background-color: #20242a;
+  background-color: #fff;
+  box-shadow: 0 0 30px rgba(0,0,0,0.5);
   max-width: 700px;
   margin: 30px auto 0;
   padding: 15px;
@@ -29,6 +29,7 @@ h1 {
 .todo_title {
   font-size: 2rem;
   text-align: center;
+  color: #191D31;
 }
 
 .create_new_todo {
@@ -38,43 +39,44 @@ h1 {
 
 .todo_text {
   margin: 15px auto;
-  padding: 1px 10px;
+  padding: 1px 20px;
   height: 35px;
   outline: none;
-  border: 1px solid #3a424d;
-  border-radius: 5px;
-  background: #20242a;
-  color: #e1ab2b;
+  border: 1px solid #efefef;
+  border-radius: 20px;
+  background: #f4f4f4;
+  color: #171717;
   font-weight: 500;
   font-size: .9rem;
 }
 
 .todo_text:focus {
-  border: 1px solid #c78814;
+  border: 1px solid #1F83A2;
 }
 
 .todo_text::placeholder {
-  color: #4c5565;
+  color: #7a7a7a;
 }
 
 .todo_btn {
-  margin: 0 auto;
+  margin: 10px auto;
   padding: 0;
   width: 99%;
   height: 35px;
   cursor: pointer;
   border: none;
-  border-radius: 5px;
-  background-color: #c78814;
+  border-radius: 20px;
+  background: linear-gradient(150deg, rgba(126, 199, 189, 1) 0%, rgba(31, 131, 162, 1) 100%);
   font-weight: 700;
   font-size: .9rem;
-  color: #22262d;
+  color: #f1f1f1;
   text-transform: uppercase;
   transition: all 0.3s ease;
 }
 
 .todo_btn:hover {
-  background-color: #a67411;
+  background: linear-gradient(150deg, rgb(106, 179, 169) 0%, rgba(11, 111, 142, 1) 100%);
+  color: #c7c7c7;
 }
 
 .todo {
@@ -95,7 +97,7 @@ h1 {
   display: flex;
   align-items: center;
   list-style-type: none;
-  color: #d0d0d0;
+  color: #131313;
   text-transform: none;
 }
 
@@ -116,18 +118,18 @@ h1 {
 }
 
 .completed.completed_active_border {
-  border-top: 1px solid #c78814;
+  border-top: 1px solid #000000;
 }
 
 .completed li {
   display: flex;
   align-items: center;
   list-style-type: none;
-  color: #3a424d;
+  color: #afafaf;
 }
 
 .completed li:not(:last-child) {
-  border-bottom: 1px dashed #3a424d;
+  border-bottom: 1px dashed #BAC3CB;
 }
 
 input[type=checkbox], label {
@@ -178,24 +180,25 @@ input[type=text], label {
 
 .controls_item {
   font-weight: 500;
-  color: #735113;
+  color: #949494;
 }
 
 .controls_item.controls_item_active {
   font-weight: 700;
-  color: #c78814;
+  color: #000000;
 }
 
 
 @media screen and (max-width: 768px) {
   body {
-    background-color: #20242a;
     font-size: 18px;
   }
 
   .todo_list {
     margin: 0 auto;
     padding: 15px 5px 5px;
+    border-radius: 0;
+
   }
 
   .todo_btn {
@@ -211,6 +214,15 @@ input[type=text], label {
     position: fixed;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.06);
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  }
+
+  .controls_item {
+    color: #1c1c1c;
+  }
+
+  .controls_item.controls_item_active {
+    color: #000000;
   }
 }
