--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   background: linear-gradient(#7EC7BD, #1F83A2) fixed;
 
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 18px;
 }
 
@@ -38,7 +38,7 @@ h1 {
 }
 
 .todo_header {
-  height: 150px;
+
 }
 
 .todo_title {
@@ -50,12 +50,17 @@ h1 {
 
 .create_new_todo {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+}
+
+.create_new_todo label {
+  margin: 0 -30px 0 0;
+  display: flex;
+  flex-direction: row;
 }
 
 .todo_text {
-  margin: 15px auto;
-  padding: 1px 20px;
+  padding: 1px 35px 1px 20px;
   height: 35px;
   outline: none;
   border: 1px solid #efefef;
@@ -77,7 +82,7 @@ h1 {
 .todo_btn {
   margin: 10px auto;
   padding: 0;
-  width: 99%;
+  width: 25%;
   height: 35px;
   cursor: pointer;
   border: none;
@@ -85,7 +90,7 @@ h1 {
   background: linear-gradient(150deg, rgba(126, 199, 189, 1) 0%, rgba(31, 131, 162, 1) 100%);
   font-weight: 700;
   font-size: .9rem;
-  color: #f1f1f1;
+  color: #383838;
   text-transform: uppercase;
   transition: all 0.3s ease;
 }
@@ -261,6 +266,7 @@ input[type=text], label {
 
   .todo_btn {
     font-size: 0.8rem;
+    width: 35%;
   }
 
   .todo_label {
