--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
 
 body {
   margin: 0;
-  background: linear-gradient(#7EC7BD, #1F83A2) fixed;
+  /*background: linear-gradient(#7EC7BD, #1F83A2) fixed;*/
+  background: white;
 
-  font-family: 'Manrope', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 20px;
 }
 
@@ -43,7 +44,7 @@ h1 {
 
 .todo_title {
   margin-bottom: 20px;
-  font-size: 1.9rem;
+  font-size: 2rem;
   text-align: center;
   color: #191D31;
 }
@@ -74,7 +75,7 @@ h1 {
   background: #f4f4f4;
   color: #171717;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .todo_text:focus {
@@ -97,8 +98,8 @@ h1 {
   border-radius: 50%;
   background: linear-gradient(150deg, rgba(126, 199, 189, 1) 0%, rgba(31, 131, 162, 1) 100%);
   font-weight: 700;
-  font-size: .9rem;
-  line-height: 1;
+  font-size: 1.2rem;
+  line-height: 0.5;
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
@@ -172,8 +173,6 @@ input[type=checkbox], label {
   margin: 5px;
   padding: 10px 0;
   cursor: pointer;
-  font-size: 1rem;
-  line-height: 1.5rem;
   word-wrap: break-word;
 }
 
@@ -214,9 +213,8 @@ input[type=text], label {
 }
 
 .controls_item {
-  font-size: 1rem;
-  font-weight: 400;
   color: #949494;
+  font-size: 1.1rem;
 }
 
 .controls_item:not(:last-child) {
@@ -261,10 +259,7 @@ input[type=text], label {
 }
 
 
-@media screen and (max-width: 768px) {
-  body {
-    font-size: 16px;
-  }
+@media screen and (max-width: 850px) {
 
   .todo_list {
     top: 0;
@@ -274,38 +269,21 @@ input[type=text], label {
     transform: none;
     width: auto;
     border-radius: 0;
-    padding: 5px 5px 0 5px;
+    padding: 0;
   }
 
   .todo_title {
     margin-bottom: 0;
   }
 
-  .todo_btn {
-    font-size: 0.9rem;
-  }
-
   .todo_label {
     margin: 0 0 0 10px;
     max-width: 80%;
-    font-size: 1rem;
-  }
-
-  .todo_content {
-
-  }
-
-  .btn_close {
-    /*margin-left: auto;*/
-    /*margin-right: 5px;*/
-  }
-
-  .todo_footer {
-
+    font-size: 1.1rem;
   }
 
   .controls_item {
-    font-size: .9rem;
+    font-size: 1.1rem;
   }
 
   .controls_item.controls_item_active {
@@ -314,11 +292,11 @@ input[type=text], label {
 }
 
 @media screen and (max-width: 320px) {
-  .todo_btn {
-    font-size: 0.8rem;
+  .todo_label {
+    font-size: 1rem;
   }
 
   .controls_item {
-    font-size: .7rem;
+    font-size: 0.9rem;
   }
 }
