--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background: #3C4249;
 
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 h1 {
@@ -72,7 +72,7 @@ h1 {
   background: #343A3F;
   color: #ffffff;
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .todo_text:focus {
@@ -185,12 +185,12 @@ input[type=text], label {
   width: 100%;
 }
 
-.btn_close {
+.btn_delete {
   padding: 10px;
   cursor: pointer;
 }
 
-.btn_close:hover {
+.btn_delete:hover {
   color: rgba(230, 92, 139, 0.9);
 }
 
@@ -294,7 +294,7 @@ input[type=text], label {
   z-index: 11;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 350%);
+  transform: translate(-50%, -50%);
   opacity: 0;
   transition: all ease 0.2s;
   width: 90vw;
@@ -320,7 +320,6 @@ input[type=text], label {
 
 .confirm_modal.confirm_modal_active {
   opacity: 1;
-  transform: translate(-50%, -50%);
 }
 
 .confirm_modal h4 {
